# tg-news-bot

./: .env  .gitignore  AGENTS.md  README.md  create_project.bat  create_skeleton.py  docker-compose.yml  pyproject.toml  requirements.txt  tg_news_bot
apps/tg_news_bot/: README.md  alembic.ini  pyproject.toml
apps/tg_news_bot/migrations/: env.py  script.py.mako
apps/tg_news_bot/migrations/versions/: 0001_initial.py  0002_llm_cache.py  0003_schedule_input_sessions.py  0004_publish_failures.py  0005_trends_quality_semantic.py  0006_trend_discovery_candidates.py  0007_smart_autoplan_rules.py
apps/tg_news_bot/src/tg_news_bot/: __main__.py  config.py  logging.py  main.py  monitoring.py
apps/tg_news_bot/src/tg_news_bot/adapters/: __init__.py  publisher.py
apps/tg_news_bot/src/tg_news_bot/db/: __init__.py  base.py  models.py  session.py
apps/tg_news_bot/src/tg_news_bot/ports/: __init__.py  publisher.py
apps/tg_news_bot/tests/: test_autoplan.py  test_callbacks_handler.py  test_content_safety.py  test_edit_sessions_service.py  test_edit_sessions_zero_tail.py  test_editing_handler.py  test_extraction.py  test_ingestion.py  test_ingestion_manual.py  test_internet_scoring.py  test_keyboards.py  test_publisher_adapter.py  test_quality_gate.py  test_rendering.py  test_rubricator.py  test_schedule_input_handler.py  test_schedule_input_service.py  test_scheduler_runner.py  test_scoring.py  test_semantic_dedup.py  test_settings_commands_handler.py  test_settings_handler.py  test_settings_source_parsing.py  test_source_quality.py  test_source_text.py  test_text_generation.py  test_trend_discovery_external_sources.py  test_trends.py  test_url_utils.py  test_workflow_move_group.py  test_workflow_processing.py  test_workflow_publish.py  test_workflow_transitions.py
libs/telegram_publisher/: README.md  pyproject.toml
libs/telegram_publisher/src/telegram_publisher/: __init__.py  exceptions.py  keyboards.py  publisher.py  types.py
libs/telegram_publisher/tests/: test_publisher_retry.py
(+92 files in other folders)
