[project]
name = "tg-news-bot"
version = "0.1.0"
description = "Telegram bot for science/tech news with human moderation"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "trafilatura>=1.9.0",
  "python-dateutil>=2.9.0.post0",
  "rapidfuzz>=3.9.0",
  "structlog>=24.2.0",
  "orjson>=3.10.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
