[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-publisher"
version = "0.1.0"
description = "Telegram API wrapper library for tg-news-bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.4.1,<4.0"
]

[tool.setuptools.packages.find]
where = ["src"]
